      lengths can be specified for each INFO chunk
    - added Resource::GenerateDLSID function
    - write support fix: allow regions without mapped samples
    - added method SetKeyRange() to the Region class which should be used
      instead of setting the KeyRange member variable directly
    - MoveRegion() method of Region class is now private

  * src/gig.cpp, src/gig.h:
    - fixed segmentation fault in the gig::File destructor sequence which
      happened when gig::Group informations were accessed before
    - fixed write support for big-endian systems
    - defined lengths of a fixed set of info strings. These strings
      are saved when the file is written, even if they are empty.
    - added missing parameter initalizations in sample, region and
      instrument constructors
    - clear unused fields when saving samples and regions
    - fixed write support bugs: v3 dimension limits and chunksize
      weren't saved, leverage controller of type controlchange
      couldn't be saved, group name list chunk was placed wrong,
      dimension region chunks also placed wrong
    - added initialization of some fixed info strings in file and
      instrument
    - write support: files created by libgig will now have the RIFF
      chunks in correct order
    - write support: two previously unknown fields in dimension
      definition are now saved
    - added constants for gig file versions
    - write support: the 3crc and einf chunks are now created or
      updated when a file is saved (3crc contains sample checksums,
      einf contains file statistics)
    - write support: DLSID is now generated on the file and the
      instruments
    - write support: improved the default values for dimension region
      parameters
    - more write support fixes: crossfade parameters were not saved,
      v3 dimension limits were not correctly initialized and saved
      when dimensions were added or deleted, v3 wave pool offsets were
      not saved correctly